--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,18 @@
+.content-home {
+  text-align: center;
+  font-family: Arial, sans-serif;
+  font-size: 36px;
+  color: white;
+  background-color: #333;
+  padding: 10px;
+  border-radius: 10px;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.content-form {
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  color: #333;
+  background-color: white;
+  padding: 20px;
+  border: 2px solid #333;
+}
