--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,3 +16,15 @@
   padding: 20px;
   border: 2px solid #333;
 }
+
+button {
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  padding: 10px 60px;
+  border-radius: 5px;
+  margin: 10px auto;
+  cursor: pointer;
+  display: block;
+  max-width: 200px;
+}
